<resources>
    <string name="app_name">JustInTime</string>

    <!-- Fields -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Enter Password</string>
    <string name="name">Name</string>
    <string name="preferredName">Preferred Name</string>
    <string name="phoneNumb">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="prefContactMethod">Preferred Contact Method</string>
    <string name="emergencyContact">Emergency Contact</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="relation">Relation</string>

    <!-- Update Password Area -->
    <string name="passwordChangeFields">Change Password</string>
    <string name="oldPassword">Enter old Password</string>
    <string name="newPassword">Enter new Password</string>
    <string name="reEnterNewPassword">Enter new Password Again</string>

    <!-- Company Information Area -->
    <string name="companyInformation">Company Information</string>
    <string name="companyName">Company Name</string>
    <string name="directReport">Direct Report</string>
    <string name="contractType">ContractType</string>
    <string name="role">Role</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>

    <!-- Email Field Errors -->
    <string name="enterEmail">Please enter an email</string>
    <string name="invalidEmailError">Entered Email is Invalid</string>
    <string name="emailOrPasswordError">Email Address or Password is Incorrect</string>

    <!-- Password Enter Errors -->
    <string name="enterPassword">Please enter a password</string>
    <string name="passwordNoCapitals">Password should contain at least one uppercase character</string>
    <string name="passwordNoLowercase">Password should contain at least on lowercase character</string>
    <string name="passwordNoDigits">Password should contain at least one digit</string>
    <string name="passwordNoSymbols">Password should contain at least one symbol</string>
    <string name="passwordLength">Password should be 10 characters long</string>
    <string name="passwordWhitespace">Password should not contain whitespace</string>
    <string name="passwordBlank">Password cannot be blank</string>
    <string name="passwordDoNotMatch">Passwords do not match</string>

    <!-- Profile -->
    <string name="save">Save</string>

    <!-- Name Errors -->
    <string name="noNameProvided">Please enter a name</string>

    <!-- Phone Number Errors -->
    <string name="invalidPhoneNumb">Please enter a valid phone number</string>


    <string name="dobError">Please Enter a Valid Date</string>
    <string name="timeError">Please Enter a Valid Time</string>

    <!-- Shift -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="full_day">All Day</string>

    <!-- Relation Values -->
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="sibling">Sibling</string>
    <string name="significationOther">Significant Other</string>
    <string name="carer">Carer</string>
    <string name="other">Other</string>

    <!-- Titles -->
    <string name="profile">Profile</string>
    <string name="user_information">User Information</string>

    <!-- Contract Types -->
    <string name="part_time">Part-Time</string>
    <string name="salary">Salary</string>
    <string name="contractor">Contractor</string>

    <string name="calendar">Calendar</string>
    <string name="request_type">Request Type</string>
    <string name="date_range">Date Range</string>
    <string name="filters">Filters</string>
    <string name="events">Events</string>
    <string name="onlyAdminShifts">My Events</string>

    <!-- Shift Event Types -->
    <string name="holiday">Holiday</string>
    <string name="unavailability">Unavailability</string>
    <string name="shifts">Shifts</string>

    <!-- Days -->
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="selectDate">Select A Date</string>

    <!-- Messages -->
    <string name="savingMessage">Saving Changes</string>

    <!-- Logo Descriptions -->
    <string name="fieldVisibility">View Text in Field</string>
    <string name="fieldVisibilityOff">Hide Text in Field</string>
    <string name="logoDescription">JustInTime Application Logo</string>

    <string name="textbox_toggle">Textbox Toggle</string>
    <string name="date_range_toggle">Toggle Date Range</string>
    <string name="time_range_toggle">Toggle Time Picker</string>

    <string name="new_event">New Event</string>
    <string name="filter_options">Filter Options</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="employees">Employees</string>

    <string name="roleError">Please enter a role</string>
    <string name="locationError">Please enter a location</string>

    <string name="errorLoading">Error Loading data, please contact your admin</string>

    <string name="blankValue" />
</resources>