package com.dbad.justintime.f_login_register.presentation.login

import androidx.activity.ComponentActivity
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onFirst
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextReplacement
import com.dbad.justintime.R
import com.dbad.justintime.core.AuthTestingRepo
import com.dbad.justintime.core.domain.use_case.ValidateDate
import com.dbad.justintime.core.domain.use_case.ValidateEmail
import com.dbad.justintime.core.domain.use_case.ValidatePassword
import com.dbad.justintime.core.domain.use_case.ValidatePhoneNumber
import com.dbad.justintime.core.presentation.util.TestTagEmailField
import com.dbad.justintime.core.presentation.util.TestTagPasswordField
import com.dbad.justintime.f_local_db.domain.model.EmergencyContact
import com.dbad.justintime.f_local_db.domain.model.Employee
import com.dbad.justintime.f_local_db.domain.model.User
import com.dbad.justintime.f_login_register.data.UsersRepositoryTestingImplementation
import com.dbad.justintime.f_login_register.domain.repository.UserRepository
import com.dbad.justintime.f_login_register.domain.use_case.DeleteTmpUser
import com.dbad.justintime.f_login_register.domain.use_case.GetEmergencyContact
import com.dbad.justintime.f_login_register.domain.use_case.GetEmployee
import com.dbad.justintime.f_login_register.domain.use_case.GetUser
import com.dbad.justintime.f_login_register.domain.use_case.UpdateLocalDatabase
import com.dbad.justintime.f_login_register.domain.use_case.UpsertEmergencyContact
import com.dbad.justintime.f_login_register.domain.use_case.UpsertEmployee
import com.dbad.justintime.f_login_register.domain.use_case.UpsertUser
import com.dbad.justintime.f_login_register.domain.use_case.UserUseCases
import com.dbad.justintime.f_login_register.presentation.LoginTestingNavController
import com.dbad.justintime.util.emailValidation
import kotlinx.coroutines.test.runTest
import org.junit.Before
import org.junit.Rule
import org.junit.Test

class LoginScreenTestingUI {

    private val validUser: User = User(
        uid = User.generateUid(email = "testing@justintime.com"),
        email = "testing@justintime.com",
        employee = "TmpEmployee"
    )
    private val validPassword: String = "MyP@ssw0rds"

    private lateinit var useCases: UserUseCases
    private val users: List<User> = listOf(
        validUser,
        User(
            uid = User.generateUid(email = "test.test@test.com"),
            email = "test.test@test.com"
        ),
        User(
            uid = User.generateUid(email = "something@something.com"),
            email = "something@something.com"
        )
    )

    @get:Rule
    val testRule = createAndroidComposeRule<ComponentActivity>()

    @Before
    fun reset() = runTest {
        val userRepo: UserRepository = UsersRepositoryTestingImplementation(
            users = users,
            employees = listOf(
                Employee(uid = "TmpEmployee", emergencyContact = "TmpEmergencyContact")
            ),
            emergencyContact = listOf(EmergencyContact(uid = "TmpEmergencyContact"))
        )
        useCases = UserUseCases(
            getUser = GetUser(repository = userRepo),
            upsertUser = UpsertUser(repository = userRepo),
            getEmployee = GetEmployee(repository = userRepo),
            upsertEmployee = UpsertEmployee(repository = userRepo),
            getEmergencyContact = GetEmergencyContact(repository = userRepo),
            upsertEmergencyContact = UpsertEmergencyContact(repository = userRepo),
            updateLocalDatabase = UpdateLocalDatabase(repository = userRepo),
            deleteTmpUser = DeleteTmpUser(repo = userRepo),
            validateEmail = ValidateEmail(),
            validatePassword = ValidatePassword(),
            validatePhoneNumber = ValidatePhoneNumber(),
            validateDate = ValidateDate()
        )

        testRule.setContent {
            LoginTestingNavController(
                useCases = useCases,
                authUser = AuthTestingRepo(user = validUser)
            )
        }
    }

    private fun checkValuesExist(screenValue: String) {
        testRule.onNodeWithText(text = screenValue)
            .assertExists(errorMessageOnFail = "Login Screen component '$screenValue' does not exist")
            .assertIsDisplayed()
    }

    @Test
    fun checkValuesDisplayed() = runTest {
        checkValuesExist(screenValue = testRule.activity.getString(R.string.email))
        checkValuesExist(screenValue = testRule.activity.getString(R.string.password))
        checkValuesExist(screenValue = testRule.activity.getString(R.string.login))
        checkValuesExist(screenValue = testRule.activity.getString(R.string.register))
    }

    @Test
    fun checkEmailFieldErrors() = runTest {
        emailValidation(
            testRule = testRule,
            emailField = testRule.onNodeWithTag(testTag = TestTagEmailField),
            expectedError = testRule.activity.getString(R.string.emailOrPasswordError),
            buttonToPress = testRule.activity.getString(R.string.login)
        )

        testRule.onNodeWithTag(testTag = TestTagEmailField)
            .performTextReplacement(text = validUser.email)
    }

    @Test
    fun checkPasswordFieldErrors() = runTest {
        var invalidPassword = ""
        testRule.onNodeWithTag(testTag = TestTagPasswordField)
            .performTextReplacement(text = invalidPassword)
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.login)).performClick()
        testRule.onAllNodesWithText(text = testRule.activity.getString(R.string.emailOrPasswordError))
            .onFirst().assertIsDisplayed()

        invalidPassword = "password"
        testRule.onNodeWithTag(testTag = TestTagPasswordField)
            .performTextReplacement(text = invalidPassword)
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.login)).performClick()
        testRule.onAllNodesWithText(text = testRule.activity.getString(R.string.emailOrPasswordError))
            .onFirst().assertIsDisplayed()
    }

    @Test
    fun checkValidLoginAttempt() = runTest {
        testRule.onNodeWithTag(testTag = TestTagEmailField)
            .performTextReplacement(text = validUser.email)
        testRule.onNodeWithTag(testTag = TestTagPasswordField)
            .performTextReplacement(text = validPassword)
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.login)).performClick()

        testRule.onAllNodesWithText(text = testRule.activity.getString(R.string.profile)).onFirst()
            .assertIsDisplayed()
    }

    @Test
    fun checkInvalidLoginAttempt_EmailNotExist() = runTest {
        testRule.onNodeWithTag(testTag = TestTagEmailField)
            .performTextReplacement(text = "test@test.com")
        testRule.onNodeWithTag(testTag = TestTagPasswordField)
            .performTextReplacement(text = "P4ssw0rd!")
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.login)).performClick()

        testRule.onAllNodesWithText(text = testRule.activity.getString(R.string.emailOrPasswordError))
            .onFirst().assertIsDisplayed()
    }

    @Test
    fun checkInvalidLoginAttempt_UserNotRegistered() = runTest {
        testRule.onNodeWithTag(testTag = TestTagEmailField)
            .performTextReplacement(text = "something@something.com")
        testRule.onNodeWithTag(testTag = TestTagPasswordField)
            .performTextReplacement(text = "P4ssw0rd!")
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.login)).performClick()

        testRule.onAllNodesWithText(text = testRule.activity.getString(R.string.emailOrPasswordError))
            .onFirst().assertIsDisplayed()
    }

    @Test
    fun checkRegisterButton() = runTest {
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.register))
            .performClick()
        testRule.onNodeWithText(text = testRule.activity.getString(R.string.login))
            .assertIsNotDisplayed()
    }
}